--- a/.github/workflows/fork-build.yml
+++ b/.github/workflows/fork-build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   fork-build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -25,10 +25,11 @@ jobs:
       - name: Generate cmake files
         run: |
           mkdir build && cd build
-          cmake .. -A Win32
+          cmake ..
+        #-A Win32
       - name: Build
         working-directory: build
-        run: cmake --build . --config ${{ matrix.configuration }} -j $env:NUMBER_OF_PROCESSORS
+        run: cmake --build . --config ${{ matrix.configuration }} #-j $env:NUMBER_OF_PROCESSORS
       - name: Prepare artifacts
         if: matrix.configuration == 'Release'
         working-directory: build
