--- a/.github/workflows/fork-build.yml
+++ b/.github/workflows/fork-build.yml
@@ -22,6 +22,12 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch_target }}
           submodules: recursive
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.x
+
       - name: Generate cmake files
         run: |
           mkdir build && cd build
